--- a/Zippy/src/main/resources/static/assets/css/adminHeader.css
+++ b/Zippy/src/main/resources/static/assets/css/adminHeader.css
@@ -1,13 +1,51 @@
-@charset "UTF-8";
-.background-video1{
-  height: 65px;
-  width: 65px;
-  object-fit: cover;
-  border-radius: 50%;
-  border: 1px solid white;
-}
-.head {
-  background: linear-gradient(to right, #bef565, #7ae187);
-  color: white;
-  height: 75px;
-}
+.background-video1 {
+      height: 50px;
+      width: 50px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 1px solid white;
+    }
+
+    .admin-header {
+      width: 100vw;
+      min-width: 100vw;
+      margin: 0;
+      padding: 0;
+    }
+
+    .admin-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0.5rem 1rem;
+      width: 100%;
+    }
+
+    .admin-text {
+      flex-grow: 1;
+      text-align: center;
+      color: white;
+      margin: 0;
+    }
+
+    .btn-logout {
+      white-space: nowrap;
+      margin-right: 10px;
+    }
+
+    @media (max-width: 576px) {
+      .admin-text {
+        font-size: 0.95rem;
+      }
+
+      .btn-logout {
+        font-size: 0.8rem;
+        padding: 0.35rem 0.65rem;
+        
+      }
+
+      .background-video1 {
+        height: 40px;
+        width: 40px;
+      }
+    }
